crates/musq/tests/trybuild/fail_encode.stderr
error: structs must have exactly one unnamed field
 --> tests/trybuild/fail_encode.rs:4:1
  |
4 | struct Bad { a: i32 }
  | ^^^^^^^^^^^^^^^^^^^^^
